feat(Docker): volumes with bind mounts app added

--- a/Docker.Volumes.BindMounts/Dockerfile
+++ b/Docker.Volumes.BindMounts/Dockerfile
@@ -1,1 +1,8 @@
-﻿
+﻿FROM mcr.microsoft.com/dotnet/sdk:6.0
+WORKDIR /app/bin
+WORKDIR /app
+COPY . .
+RUN dotnet restore ./Docker.Volumes.BindMounts.csproj
+RUN dotnet build -c Release --no-restore -o bin ./Docker.Volumes.BindMounts.csproj
+WORKDIR bin
+ENTRYPOINT ["dotnet", "Docker.Volumes.BindMounts.dll"]
