--- a/Docker.Volumes.BindMounts/Docker.Volumes.BindMounts.csproj
+++ b/Docker.Volumes.BindMounts/Docker.Volumes.BindMounts.csproj
@@ -5,4 +5,10 @@
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <None Update="VolumeData\data.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
