--- a/Docker.Volumes.MariaDbReuse.WebApi/appsettings.json
+++ b/Docker.Volumes.MariaDbReuse.WebApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=mariadb-host;Database=TestDB;Uid=root;Pwd=example;"
+  }
 }
