--- a/Docker.Volumes.MariaDbReuse.WebApi/.env
+++ b/Docker.Volumes.MariaDbReuse.WebApi/.env
@@ -1,3 +1,4 @@
 MARIADB_ROOT_PASSWORD=example
 MARIADB_HOST=mariadb-host
 MARIADB_DB='Server=mariadb-host;Database=TestDB;Uid=root;Pwd=example;'
+MARIADB_DATABASE=TestDB
