fix(docker-compose): true configuration is used, the only environment is passed to Dockerfile

--- a/Docker.Volumes.MariaDbReuse.WebApi/Docker/.env
+++ b/Docker.Volumes.MariaDbReuse.WebApi/Docker/.env
@@ -2,3 +2,4 @@ MARIADB_ROOT_PASSWORD=example
 MARIADB_HOST=mariadb-host
 MARIADB_DB='Server=mariadb-host;Database=TestDB;Uid=root;Pwd=example;'
 MARIADB_DATABASE=TestDB
+ENVIRONMENT=Development
