--- a/Docker.Volumes.MariaDbReuse.WebApi/appsettings.Development.json
+++ b/Docker.Volumes.MariaDbReuse.WebApi/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=mariadb-host;Database=DeveopmentDb;Uid=root;Pwd=example;"
   }
 }
