--- a/Docker.Volumes.MariaDbReuse.WebApi/appsettings.json
+++ b/Docker.Volumes.MariaDbReuse.WebApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=mariadb-host;Database=TestDB;Uid=root;Pwd=example;"
+    "DefaultConnection": "Server=mariadb-host;Database=ProductionDb;Uid=root;Pwd=example;"
   }
 }
