--- a/Docker.Volumes.MariaDbReuse.WebApi/appsettings.Development.json
+++ b/Docker.Volumes.MariaDbReuse.WebApi/appsettings.Development.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=mariadb-host;Database=DeveopmentDb;Uid=root;Pwd=example;"
+    "DefaultConnection": "Server=mariadb-host;Database=DevelopmentDb;Uid=root;Pwd=example;"
   }
 }
