--- a/Docker.Volumes.MariaDbReuse.WebApi/Docker/.env
+++ b/Docker.Volumes.MariaDbReuse.WebApi/Docker/.env
@@ -1,5 +1,4 @@
 MARIADB_ROOT_PASSWORD=example
 MARIADB_HOST=mariadb-host
-MARIADB_DB='Server=mariadb-host;Database=TestDB;Uid=root;Pwd=example;'
-MARIADB_DATABASE=TestDB
+MARIADB_DATABASE=DevelopmentDb
 ENVIRONMENT=Production
