--- a/Docker.Volumes.MariaDbReuse.WebApi/Docker/docker-compose-webapi-client.yml
+++ b/Docker.Volumes.MariaDbReuse.WebApi/Docker/docker-compose-webapi-client.yml
@@ -3,8 +3,7 @@
 #just reference
 x-docker-envs: &x-envs
  environment:
-  - MARIADB_ROOT_PASSWORD:${MARIADB_ROOT_PASSWORD}
-  - MYSQL_ROOT_PASSWORD:${MARIADB_ROOT_PASSWORD}
+  - MARIADB_ROOT_PASSWORD:${MARIADB_ROOT_PASSWORD}  
   - ASPNETCORE_ENVIRONMENT:${ENVIRONMENT}
   - MARIADB_HOST:${MARIADB_HOST}
   - MARIADB_DATABASE:${MARIADB_DATABASE}
@@ -16,8 +15,8 @@ services:
   container_name: mariadb
   restart: always 
   environment:
-   - MARIADB_ROOT_PASSWORD:$MARIADB_ROOT_PASSWORD
-   - MARIADB_DATABASE:$MARIADB_DATABASE
+   MARIADB_ROOT_PASSWORD: $MARIADB_ROOT_PASSWORD
+   MARIADB_DATABASE: $MARIADB_DATABASE
   #volumes:
   # - ./mariadb/data:/var/lib/mysql
   networks:
@@ -31,7 +30,7 @@ services:
   container_name: webapi-client 
   restart: always
   environment:
-   ASPNETCORE_ENVIRONMENT: ${ENVIRONMENT}
+   ASPNETCORE_ENVIRONMENT: $ENVIRONMENT
   ports:   
    - 8081:8081
   depends_on:
