fix(docker-compose): bind mount volume works with mariadb

--- a/Docker.Volumes.MariaDbReuse.WebApi/Docker/docker-compose-webapi-client.yml
+++ b/Docker.Volumes.MariaDbReuse.WebApi/Docker/docker-compose-webapi-client.yml
@@ -17,8 +17,8 @@ services:
   environment:
    MARIADB_ROOT_PASSWORD: $MARIADB_ROOT_PASSWORD
    MARIADB_DATABASE: $MARIADB_DATABASE
-  #volumes:
-  # - ./mariadb/data:/var/lib/mysql
+  volumes:
+   - E:\containers-data\maria-10.7:/var/lib/mysql
   networks:
   - mariadb-network
  
