fix(): storage-config.yaml fix

--- a/Docker.Volumes.MariaDbReuse.WebApi/K8s/storage-config.yaml
+++ b/Docker.Volumes.MariaDbReuse.WebApi/K8s/storage-config.yaml
@@ -6,4 +6,4 @@ data:
   # property-like keys; each key maps to a simple value
   database_host: mariadb-service
   database_name: ProductionDb
-  environment: Development;
+  environment: Development
