--- a/Docker.Volumes.MariaDbReuse.WebApi/K8s/webapi.yaml
+++ b/Docker.Volumes.MariaDbReuse.WebApi/K8s/webapi.yaml
@@ -19,22 +19,24 @@ spec:
           image: webapi-client:1.1
           ports:
             - containerPort: 8081
-          env:            
-            ASPNETCORE_ENVIRONMENT: 
-              valueFrom:
-                configMapKeyRef:
-                  name: configmap-demo 
-                  key: environment 
+          env:
+            - name: ASPNETCORE_ENVIRONMENT
+                valueFrom:
+                  configMapKeyRef:
+                    name: configmap-demo 
+                    key: environment
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: webapi-service
 spec:
+  type: NodePort
   selector:
     #app.kubernetes.io/name: MyApp
     app: webapi
   ports:
     - protocol: TCP
-      port: 3306
-      targetPort: 3306
+      port: 8081
+      targetPort: 8081
+      nodePort: 30081
