--- a/Docker.Volumes.MariaDbReuse.WebApi/K8s/webapi.yaml
+++ b/Docker.Volumes.MariaDbReuse.WebApi/K8s/webapi.yaml
@@ -3,16 +3,18 @@ kind: Deployment
 metadata:
   name: webapi-deployment
   labels:
-    app: webapi
+    app: webapi-with-db # belongs to Deployment itself, no need to match it with Pod label?
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: webapi
+      app: webapi-with-db
+  strategy:
+    type: Recreate
   template:
     metadata:
       labels:
-        app: webapi
+        app: webapi-with-db
     spec:
       containers:
         - name: webapi-client
@@ -21,22 +23,44 @@ spec:
             - containerPort: 8081
           env:
             - name: ASPNETCORE_ENVIRONMENT
-                valueFrom:
-                  configMapKeyRef:
-                    name: configmap-demo 
-                    key: environment
+              valueFrom:
+                configMapKeyRef:
+                  name: configmap-demo 
+                  key: environment
+          volumeMounts:
+            - name: configs-persistent-storage
+              mountPath: /app/configs
+      volumes: 
+      - name: configs-persistent-storage
+        persistentVolumeClaim:
+          claimName: configs-pv-claim
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: webapi-service
+  labels:
+    app: webapi-with-db
 spec:
   type: NodePort
   selector:
     #app.kubernetes.io/name: MyApp
-    app: webapi
+    app: webapi-with-db
   ports:
     - protocol: TCP
       port: 8081
       targetPort: 8081
       nodePort: 30081
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: configs-pv-claim
+  labels:
+    app: webapi-with-db
+spec:
+  accessModes:
+    - ReadWriteMany
+  resources:
+    requests:
+      storage: 20M
